--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body background="black_velvet.jpg">
     <center>
         <p id="carrier"> 0 </p>
-        <bottom>
-            <button onClick="displayCount()">Click</button>
-        </bottom>
+        
+            <button onClick="displayCount()" class="block">Click</button>
+        
     </center>
     <script src="script.js"></script>
 </body>
