--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 
 </head>
 
-<body background="black_velvet.jpg">
-    <center>
-        <p id="carrier"> 0 </p>
-        
-            <button onClick="displayCount()" class="block">Click</button>
-        
-    </center>
+<body bgcolor=black>
+    <p id="carrier"> 0 </p>
+    <button onClick="displayCount()" class="block"></button>
     <script src="script.js"></script>
 </body>
 </html>
